# py3toolkit

./: .gitignore  README.md  pyproject.toml
docs/: sshx.md
py3toolkit/: gen_supervisor_conf.py  sshw.py  sshx.py
tests/: test_gen_supervisor_conf.py  test_sshw.py  test_sshx.py
tests/testdata/: group-supervisor.yml  test-supervisor.yml
