[tool.poetry]
name = "py3toolkit"
version = "0.1.2"
description = "my python3 toolkit for daily use"
authors = ["codeskyblue <codeskyblue@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
