[tool.poetry]
name = "py3toolkit"
version = "0.0.0"
description = "my python3 toolkit for daily use"
authors = ["codeskyblue <codeskyblue@gmail.com>"]
license = "MIT"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
dataclasses-json = "^0.5.7"
pyyaml = "^6.0"
prompt_toolkit = "*"

[tool.poetry.scripts]
gen_supervisor_conf = "py3toolkit.gen_supervisor_conf:main"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
